corrected alignment

--- a/src/components/HowItWorks/HowItWorks.css
+++ b/src/components/HowItWorks/HowItWorks.css
@@ -10,7 +10,6 @@
   font-weight: 600;
   font-size: 50px;
   line-height: 61px;
-  margin-bottom: 40px;
 }
 .container2 > div {
   display: flex;
